v1.7.0 Dev 8 * 修复进度无法生成的问题 * 优化配置网络包 * 优化项目结构