@@ -3,6 +3,7 @@ package com.github.winexp.battlegrounds.item.weapon;
 import com.github.winexp.battlegrounds.entity.effect.StatusEffects;
 import com.github.winexp.battlegrounds.item.EnchantRestrict;
 import com.github.winexp.battlegrounds.sound.SoundEvents;
+import com.google.common.collect.ImmutableList;
 import net.minecraft.entity.EquipmentSlot;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.effect.StatusEffectInstance;
@@ -13,7 +14,7 @@ import net.minecraft.item.ToolMaterial;
 import java.util.List;
 
 public class ButchersAxeItem extends AxeItem implements EnchantRestrict {
-    private static final List<StatusEffectInstance> penaltyEffects = List.of(
+    private static final List<StatusEffectInstance> penaltyEffects = ImmutableList.of(
             new StatusEffectInstance(StatusEffects.SLOWNESS, 7 * 20, 1),
             new StatusEffectInstance(StatusEffects.WITHER, 7 * 20, 0),
             new StatusEffectInstance(StatusEffects.POISON, 7 * 20, 0),
@@ -23,12 +24,6 @@ public class ButchersAxeItem extends AxeItem implements EnchantRestrict {
 
     public ButchersAxeItem(ToolMaterial material, Settings settings) {
         super(material, settings);
-    }
-
-    private void givePenaltyEffects(LivingEntity target) {
-        for (StatusEffectInstance effectInstance : penaltyEffects) {
-            target.addStatusEffect(new StatusEffectInstance(effectInstance));
-        }
     }
 
     @Override
@@ -45,7 +40,9 @@ public class ButchersAxeItem extends AxeItem implements EnchantRestrict {
     public boolean postHit(ItemStack stack, LivingEntity target, LivingEntity attacker) {
         stack.damage(1, attacker, EquipmentSlot.MAINHAND);
         if (!target.getWorld().isClient) {
-            this.givePenaltyEffects(attacker);
+            for (StatusEffectInstance effectInstance : penaltyEffects) {
+                target.addStatusEffect(new StatusEffectInstance(effectInstance));
+            }
             target.playSound(SoundEvents.PLAYER_TUBE_FALL, 2.0F, 1.0F);
         }
         return true;
